crates/analyzer/tests/snapshots/errors__cannot_move2.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: can't move value onto stack
  ┌─ compile_errors/cannot_move2.fe:6:22
  │
6 │     let c:u256[20] = x + y
  │                      ^ Value to be moved
  │
  = Note: Can't move `u256[10]` types on the stack


